--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -129,14 +129,23 @@
   <data name="Context_IllegalScopeStarted" xml:space="preserve">
     <value>Cannot start this scope because a more restrive scope is still active.</value>
   </data>
-  <data name="DomainEvent_IncompatibleMemberType" xml:space="preserve">
-    <value>Value of member '{0}.{1}' of type '{2}' could not be converted to an instance of type '{3}'.</value>
+  <data name="DomainEvent_IncompatibleKeyType" xml:space="preserve">
+    <value>Event '{0}' contains a member marked with the KeyAttribute which type is not compatible with the Key-type of the event.</value>
   </data>
-  <data name="DomainEvent_MemberNotFound" xml:space="preserve">
-    <value>Could not resolve member of type '{0}' on event of type '{1}'. Consider overriding the Key and Version properties.</value>
+  <data name="DomainEvent_IncompatibleVersionType" xml:space="preserve">
+    <value>Event '{0}' contains a member marked with the VersionAttribute which type is not compatible with the Version-type of the event.</value>
   </data>
-  <data name="DomainEvent_MultipleCandidateMembersFound" xml:space="preserve">
-    <value>Could not decide on a member of type '{0}' on event of type '{1}' because multiple candidate members were found. Consider overriding the Key and Version properties.</value>
+  <data name="DomainEvent_KeyMemberNotFound" xml:space="preserve">
+    <value>Could not resolve Key on event of type '{0}'. Please mark one field or property as the Key of this event.</value>
+  </data>
+  <data name="DomainEvent_MultipleKeyMembersFound" xml:space="preserve">
+    <value>Event '{0}' contains more than one member that is decorated with KeyAttribute, where only one is allowed.</value>
+  </data>
+  <data name="DomainEvent_MultipleVersionMembersFound" xml:space="preserve">
+    <value>Event '{0}' contains more than one member that is decorated with VersionAttribute, where only one is allowed.</value>
+  </data>
+  <data name="DomainEvent_VersionMemberNotFound" xml:space="preserve">
+    <value>Could not resolve Version on event of type '{0}'. Please mark one field or property as the Version of this event.</value>
   </data>
   <data name="DomainModelException_CommandFailed" xml:space="preserve">
     <value>Command '{0}' failed.</value>
