--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -180,6 +180,9 @@
   <data name="Message_CopyNotSupported" xml:space="preserve">
     <value>Message of type '{0}' could not be copied because it is neither a DataContract nor Serializable. Mark this message with the DataContractAttribute or the SerializableAttribute, or provide a custom implementation of the Copy()-method by overridding it.</value>
   </data>
+  <data name="NumberExtensions_NegativeEpsilon" xml:space="preserve">
+    <value>Epsilon ({0}) cannot be negative.</value>
+  </data>
   <data name="Range_InvalidRange" xml:space="preserve">
     <value>The specified range is not valid: {0}.</value>
   </data>
