--- a/src/Kingo.Windows/Resources/ExceptionMessages.resx
+++ b/src/Kingo.Windows/Resources/ExceptionMessages.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ProjectionCameraControllerBehavior_InvalidOperation" xml:space="preserve">
-    <value>Operation '{0}' not allowed in state '{1}'.</value>
+  <data name="Command_CannotExecuteCommand" xml:space="preserve">
+    <value>Command could not be executed with parameter '{0}'.</value>
   </data>
   <data name="ProjectionCameraController_NoCameraSet" xml:space="preserve">
     <value>Cannot perform the operation because no camera was set on the controller.</value>
+  </data>
+  <data name="State_InvalidOperation" xml:space="preserve">
+    <value>Operation '{0}' not allowed in state '{1}'.</value>
   </data>
 </root>
