--- a/src/Kingo.Windows/Resources/ExceptionMessages.resx
+++ b/src/Kingo.Windows/Resources/ExceptionMessages.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ControlModeCommandBinding_AlreadyActivated" xml:space="preserve">
+    <value>Cannot activate binding '{0}' because it is already activated.</value>
+  </data>
+  <data name="ControlModeCommandBinding_AlreadyDeactivated" xml:space="preserve">
+    <value>Cannot deactivate binding '{0}' because it is already deactivated.</value>
+  </data>
   <data name="ProjectionCameraController_NoCameraSet" xml:space="preserve">
     <value>Cannot perform the operation because no camera was set on the controller.</value>
   </data>
