--- a/src/Kingo.Windows/Resources/ExceptionMessages.resx
+++ b/src/Kingo.Windows/Resources/ExceptionMessages.resx
@@ -126,6 +126,9 @@
   <data name="ProjectionCameraController_NoCameraSet" xml:space="preserve">
     <value>Cannot perform the operation because no camera was set on the controller.</value>
   </data>
+  <data name="ProjectionCameraController_UnsupportedCamera" xml:space="preserve">
+    <value>Camera of type '{0}' is not supported by the controller.</value>
+  </data>
   <data name="State_InvalidOperation" xml:space="preserve">
     <value>Operation '{0}' not allowed in state '{1}'.</value>
   </data>
