--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AggregateRoot_EventConversionException" xml:space="preserve">
+    <value>Could not convert event of type '{0}' to an instance of type '{1}'. Please review the {2}() method of this event to ensure it returns the correct event type.</value>
+  </data>
+  <data name="AggregateRoot_HandlerForEventTypeAlreadyAdded" xml:space="preserve">
+    <value>Another handler for event of type '{0}' has already been added to this collection.</value>
+  </data>
+  <data name="AggregateRoot_InvalidIdOnEvent" xml:space="preserve">
+    <value>Id '{0}' on event '{1}' does not match the identifier of the aggregate it is being applied to ({2}).</value>
+  </data>
+  <data name="AggregateRoot_MissingEventHandlerException" xml:space="preserve">
+    <value>Missing event handler for event of type '{0}'.</value>
+  </data>
+  <data name="AggregateRoot_VersionUpdateException" xml:space="preserve">
+    <value>The next version ({0}) must represent a newer version than the current version ({1}).</value>
+  </data>
   <data name="Comparable_IncomparableType" xml:space="preserve">
     <value>The specified object of type '{0}' cannot be compared to instance of type '{1}'.</value>
   </data>
