--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AggregateRoot_AggregateRemovedException" xml:space="preserve">
+    <value>Aggregate of type '{0}' cannot publish event of type '{1}' because it has been removed from its repository and its lifetime has therefore ended.</value>
+  </data>
   <data name="AggregateRoot_EventConversionException" xml:space="preserve">
     <value>Could not convert event of type '{0}' to an instance of type '{1}'. Please review the {2}() method of this event to ensure it returns the correct event type.</value>
   </data>
@@ -208,10 +211,16 @@
     <value>There is no element at index '{0}' (Count = {1}).</value>
   </data>
   <data name="Repository_AggregateNotFound" xml:space="preserve">
-    <value>Instance of type '{0}' with Id '{1}' was not found.</value>
+    <value>Aggregate of type '{0}' with Id '{1}' was not found in the data store.</value>
+  </data>
+  <data name="Repository_AggregateRemovedInSession" xml:space="preserve">
+    <value>Aggregate of type '{0}' with Id '{1}' could not be retrieved because it was removed from the data store in this session.</value>
   </data>
   <data name="Repository_AggregateRestoreException" xml:space="preserve">
     <value>An error occurred while restoring aggregate of type '{0}'. See inner exception for details.</value>
+  </data>
+  <data name="Repository_DuplicateKeyException_AggregateAlreadyExists" xml:space="preserve">
+    <value>Cannot add aggregate of type '{0}' to the repository because another aggregate with Id '{1}' is already present in the data store.</value>
   </data>
   <data name="Scope_CannotCompleteScope" xml:space="preserve">
     <value>Cannot complete this scope because it is not the current scope.</value>
