Added some ready-to-use authorization attribute filters.

--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -258,6 +258,18 @@
   <data name="Repository_DuplicateKeyException_AggregateAlreadyExists" xml:space="preserve">
     <value>Cannot add aggregate of type '{0}' to the repository because another aggregate with Id '{1}' is already present in the data store.</value>
   </data>
+  <data name="RequiresAuthenticatedPrincipalFilter_PrincipalNotAuthenticated" xml:space="preserve">
+    <value>User '{0}' is not authenticated.</value>
+  </data>
+  <data name="RequiresClaimsAttribute_MissingClaim" xml:space="preserve">
+    <value>User '{0}' must have claim '{1}'.</value>
+  </data>
+  <data name="RequiresClaimsAttribute_PrincipalIsNoClaimsPrincipal" xml:space="preserve">
+    <value>User '{0}' must be a ClaimsPrincipal.</value>
+  </data>
+  <data name="RequiresRoleAttribute_MissingRole" xml:space="preserve">
+    <value>User '{0}' must be in role '{1}'.</value>
+  </data>
   <data name="Scope_CannotCompleteScope" xml:space="preserve">
     <value>Cannot complete this scope because it is not the current scope.</value>
   </data>
