--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -144,6 +144,12 @@
   <data name="Context_IllegalScopeStarted" xml:space="preserve">
     <value>Cannot start this scope because a more restrive scope is still active.</value>
   </data>
+  <data name="DateTimeSpan_InvalidTimeSpan" xml:space="preserve">
+    <value>Invalid time span specified: [{0}, {1}].</value>
+  </data>
+  <data name="DateTimeSpan_TimeSpanZeroNotAllowed" xml:space="preserve">
+    <value>'{0}' is not allowed to be zero.</value>
+  </data>
   <data name="DomainModelException_CommandFailed" xml:space="preserve">
     <value>Command '{0}' failed.</value>
   </data>
