--- a/src/Kingo/Resources/ExceptionMessages.resx
+++ b/src/Kingo/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AggregateDataSet_NonMatchingIdentifiers" xml:space="preserve">
+    <value>Cannot append specified dataset because its Id ({0}) does not match the Id of the current dataset ({1}).</value>
+  </data>
   <data name="AggregateRootFactory_ConstructorNotFound" xml:space="preserve">
     <value>Cannot restore aggregate of type '{0}': required constructor '{0}({1})' not found.</value>
   </data>
