--- a/src/Kingo/ExceptionMessages.resx
+++ b/src/Kingo/ExceptionMessages.resx
@@ -151,7 +151,10 @@
     <value>Cannot obtain single attribute of type '{0}' declared on '{1}' because multiple attributes are of type '{0}'.</value>
   </data>
   <data name="AuthorizationStageAttribute_IdentityNotAuthenticated" xml:space="preserve">
-    <value>User '{0}' is not authenticated.</value>
+    <value>Access to '{0}' denied: user '{1}' is not authenticated.</value>
+  </data>
+  <data name="AuthorizationStageAttribute_PrincipalNotSet" xml:space="preserve">
+    <value>Access to '{0}' denied: principal not set.</value>
   </data>
   <data name="ClaimsProvider_ClaimNotFound" xml:space="preserve">
     <value>User '{0}' must have claim '{1}'.</value>
